# live-speech-to-text

./: .gitignore  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  start.sh  test.txt  uninstall.sh
.github/: FUNDING.yml
src/live_stt/: __init__.py  __main__.py  app.py  audio.py  config.py  gui.py  hotkey.py  paster.py  transcriber.py  translator.py  tray.py
src/live_stt/gui/: __init__.py  donate_tab.py  history_entry.py  log_tab.py  logs_tab.py  main_tab.py  post_processing_tab.py  settings_tab.py  style.py  window.py
src/live_stt/post_processors/: __init__.py  base.py  llm_base.py  registry.py
src/live_stt/post_processors/anthropic/: __init__.py  config.py  gui.py  service.py
src/live_stt/post_processors/deepl/: __init__.py  config.py  gui.py  service.py
src/live_stt/post_processors/gemini/: __init__.py  config.py  gui.py  service.py
src/live_stt/post_processors/openai/: __init__.py  config.py  gui.py  service.py
src/live_stt/services/: __init__.py  audio.py  config.py  hotkey.py  icons.py  keystore.py  logger.py  paster.py  transcriber.py  tray.py
src/live_stt/services/translators/: __init__.py  anthropic.py  base.py  deepl.py  factory.py  service.py
src/live_stt/translators/: __init__.py  factory.py
